[tool.poetry]
name = "xudoku"
version = "0.1.1-alpha.0"
description = "Solve sudoku using an 'exact cover' algorithm."
authors = ["Moy Easwaran"]
license = "GNU GPL v2.0"

[tool.poetry.dependencies]
python = "^3.7"
exact-cover = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
