[tool.poetry]
name = "xudoku"
version = "0.3.1-alpha.0"
description = "Solve sudoku using an 'exact cover' algorithm."
authors = ["Moy Easwaran"]
maintainers = ["Jack Grahl <jack.grahl@gmail.com>"]
license = "GPL-2.0-only"
readme = "README.md"
repository = "https://github.com/jwg4/xudoku"

[tool.poetry.dependencies]
python = "^3.7.1"
exact-cover = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"

[tool.poetry.scripts]
test = 'run_tests:test'
doctest = 'run_tests:run_doctest'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
